# dcs-autocomp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build  complete_console.sh  db_rec_names.c  db_rec_names.h  main.c  notes.md  test_db_recnames.cpp
configure/: RELEASE
testdata/: Z.db  bl12i-db.txt  bl13i-db.txt  expected_output_dcs_compgen-BL12I.txt  redirect  redirect_small  redirect_small_real  redirect_table  test_dcs_compgen.bats  test_small.db
testdata/db/: BL12I-MO-IOC-03.db  test_small.db
